[tool.poetry]
name = "repl_python3_Time-scheduler-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.18"
aioschedule = "^0.5.2"
Pillow = "^9.0.0"
colour = "^0.1.5"
numpy = "^1.22.0"
requests = "^2.27.1"
telegram = "^0.0.1"
Babel = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
